--- a/index.html
+++ b/index.html
@@ -152,9 +152,7 @@
 
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Name:</span> <span>Reza Mahaditya</span></li>
-									<li class="d-flex"><span>Date of birth:</span> <span>January 15, 2006</span></li>
-									<li class="d-flex"><span>Address:</span> <span>Jl. Cendana No.18, RT.01/RW.07, Dadaprejo, Kec. Junrejo, Batu City, East Java 65323</span></li>
-									<li class="d-flex"><span>Zip code:</span> <span>65321</span></li>
+									<li class="d-flex"><span>Address:</span> <span>Jl. Cendana No.18, RT.01/RW.07, Dadaprejo, Kec. Junrejo, Batu City, East Java</span></li>
 									<li class="d-flex"><span>Email:</span> <span>rezamahaditya15@gmail.com</span></li>
 									<li class="d-flex"><span>Phone: </span> <span>+62-895-2382-4566</span></li>
 								</ul>
@@ -622,7 +620,7 @@
 								<span class="fa fa-map-marker"></span>
 							</div>
 							<div class="text">
-								<p><span>Address:</span>Jl. Cendana No.18, RT.01/RW.07, Dadaprejo, Kec. Junrejo, Batu City, East Java 653236</p>
+								<p><span>Address:</span>Jl. Cendana No.18, RT.01/RW.07, Dadaprejo, Kec. Junrejo, Batu City, East Java</p>
 							</div>
 						</div>
 						<div class="dbox w-100 d-flex">
@@ -694,7 +692,7 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon fa fa-map marker"></span><span class="text">l. Cendana No.18, RT.01/RW.07, Dadaprejo, Kec. Junrejo, Batu City, East Java 653236</span></li>
+								<li><span class="icon fa fa-map marker"></span><span class="text">l. Cendana No.18, RT.01/RW.07, Dadaprejo, Kec. Junrejo, Batu City, East Java</span></li>
 								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+62 895-2382-4566</span></a></li>
 								<li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span class="text">rezamahaditya15@gmail</span></a></li>
 							</ul>
