--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
 								<span class="fa fa-phone"></span>
 							</div>
 							<div class="text">
-								<p><span>Phone:</span> <a href="tel://1234567920">+62 62-895-2382-4566</a></p>
+								<p><span>Phone:</span> <a href="https://wa.link/pgw06f">+62 62-895-2382-4566</a></p>
 							</div>
 						</div>
 						<div class="dbox w-100 d-flex">
@@ -636,7 +636,7 @@
 								<span class="fa fa-paper-plane"></span>
 							</div>
 							<div class="text">
-								<p><span>Email:</span> <a href="mailto:info@yoursite.com">rezamahaditya15@gmail.com/a></p>
+								<p><span>Email:</span> <a href="mailto:rezamahaditya15@gmail.com">rezamahaditya15@gmail.com</a></p>
 							</div>
 						</div>
 						<div class="dbox w-100 d-flex">
@@ -644,7 +644,7 @@
 								<span class="fa fa-globe"></span>
 							</div>
 							<div class="text">
-								<p><span>Website</span> <a href="#">personal-reza.com</a></p>
+								<p><span>Website</span> <a href="https://rezamahaditya23.github.io/reza-project/">personal-reza.com</a></p>
 							</div>
 						</div>
 					</div>
