--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon fa fa-map marker"></span><span class="text">l. Cendana No.18, RT.01/RW.07, Dadaprejo, Kec. Junrejo, Batu City, East Java</span></li>
+								<li><span class="icon fa fa-map marker"></span><span class="text">jl. Cendana No.18, RT.01/RW.07, Dadaprejo, Kec. Junrejo, Batu City, East Java</span></li>
 								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+62 895-2382-4566</span></a></li>
 								<li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span class="text">rezamahaditya15@gmail</span></a></li>
 							</ul>
