--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<div class="text">
 								<span class="subheading">Hello! This is Reza</span>
 								<h1 class="mb-4 mt-3">Full <span>Stack</span> Developer &amp; Development</h1>
-								<p><a href="#about-section" class="btn btn-primary">Hire me</a> <a href="file:///C:/Users/MODERN%2014/Downloads/Reza%20Mahaditya_CV.pdf" class="btn btn-primary btn-outline-primary">Download CV</a></p>
+								<p><a href="#about-section" class="btn btn-primary">Hire me</a> <a href="file:///C:/Users/MODERN%2014/Downloads/Reza%20Mahaditya-resume%20(1).pdf" class="btn btn-primary btn-outline-primary">Download CV</a></p>
 							</div>
 						</div>
 					</div>
